--- a/video-info/index.html
+++ b/video-info/index.html
@@ -15,9 +15,13 @@
         </form>
 
         <script>
+        const {ipcRenderer} = require('electron');
+
         document.querySelector('form').addEventListener('submit', function (e) {
                 e.preventDefault();
-                var file = document.querySelector('input').files[0];
+                const {path} = document.querySelector('input').files[0];
+                console.log(path);
+                ipcRenderer.send('video:submit', path);
             });
         </script>
     </body>
